force-app/main/default/objects/sc_ext__Data_Classification_Level_Snapshot__c/fields/sc_ext__Count__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the number of fields classified with this sensitivity level at the time this snapshot was run in the organization.</description>
    <inlineHelpText>This is the number of fields classified with this sensitivity level at the time this snapshot was run in the organization.</inlineHelpText>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>