force-app/main/default/objects/sc_ext__Data_Classification_Level_Snapshot__c/fields/sc_ext__Data_Classification_Level__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Data_Classification_Level__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The sensitivity level that this snapshot was aggregated for</description>
    <label>Data Classification Sensitivity Level</label>
    <referenceTo>sc_ext__Data_Classification_Level__c</referenceTo>
    <relationshipLabel>Data Classification Level Snapshots</relationshipLabel>
    <relationshipName>Data_Classification_Level_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>