force-app/main/default/objects/sc_ext__Data_Classification_Level_Snapshot__c/fields/sc_ext__Data_Classification_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Data_Classification_Snapshot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The job that created this data classification sensitivity level snapshot</description>
    <label>Data Classification Snapshot</label>
    <referenceTo>sc_ext__Data_Classification_Snapshot__c</referenceTo>
    <relationshipLabel>Data Classification Level Snapshots</relationshipLabel>
    <relationshipName>Data_Classification_Level_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>