force-app/main/default/objects/sc_ext__Data_Classification_Level_Snapshot__c/fields/sc_ext__Sensitivity_Level__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Sensitivity_Level__c</fullName>
    <description>This field displays the name of the sensitivity level that this snapshot was aggregated for, or &quot;Unclassified&quot; if this snapshot was aggregated for fields not classified.</description>
    <formula>IF(
  ISBLANK( sc_ext__Data_Classification_Level__c ),
  &quot;Unclassified&quot;,
  sc_ext__Data_Classification_Level__r.Name 
)</formula>
    <label>Sensitivity Level</label>
    <type>Text</type>
</CustomField>